<resources>
    <string name="app_name">Nespresso APP</string>

    <string name="txt_coffees_title">Cafés</string>
    <string name="txt_coffees_subtitle">Cremosos, espumosos, hmm</string>

    <string name="txt_machines_title">Máquinas</string>
    <string name="txt_machines_subtitle">Sem elas não rola café</string>

    <string name="txt_accessories_title">Acessórios</string>
    <string name="txt_accessories_subtitle">Pra completar a balaca</string>
    <string name="title_activity_coffee">CoffeeActivity</string>

    <string name="txt_products">Produtos</string>
    <string name="txt_favorites">Favoritos</string>
    <string name="txt_bag">Sacola</string>

    <string name="txt_intensity">Intensidade: %d</string>
    <string name="txt_error_title">Opss, algo deu errado</string>
    <string name="txt_try_again">Tente novamente mais tarde</string>
    <string name="txt_put_in_basket">Adicionar à sacola</string>
    <string name="txt_intensity_formatted">Intensidade: %1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>