<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.feature.products.ProductsActivity">

    <br.com.cwi.nespresso_app.presentation.component.ProductItemConstraintLayout
        android:id="@+id/content_coffees"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:component_product_item_menu_title="@string/txt_coffees_title"
        app:component_product_item_menu_subtitle="@string/txt_coffees_subtitle"
        app:component_product_item_menu_image="@drawable/coffees"
        android:background="@color/coffees_color"
        app:layout_constraintBottom_toTopOf="@id/content_machines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <br.com.cwi.nespresso_app.presentation.component.ProductItemConstraintLayout
        android:id="@+id/content_machines"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:component_product_item_menu_title="@string/txt_machines_title"
        app:component_product_item_menu_subtitle="@string/txt_machines_subtitle"
        app:component_product_item_menu_image="@drawable/machines"
        android:background="@color/machines_color"
        app:layout_constraintBottom_toTopOf="@id/content_accessories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_coffees" />

    <br.com.cwi.nespresso_app.presentation.component.ProductItemConstraintLayout
        android:id="@+id/content_accessories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:component_product_item_menu_title="@string/txt_accessories_title"
        app:component_product_item_menu_subtitle="@string/txt_accessories_subtitle"
        app:component_product_item_menu_image="@drawable/cups"
        android:background="@color/accessories_color"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_machines" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>
